# BioFlux

./: .env.example  .gitignore  ACADEMIC_IMPLEMENTATION_SECTION.md  API_SETUP.md  CLEANUP_SUMMARY.md  CLEAN_STRUCTURE.md  COMPARATIVE_STUDY_SUMMARY.md  FINAL_SUCCESS_REPORT.md  MODEL_DEMONSTRATIONS_SUMMARY.md  README.md  RESEARCH_ACTION_PLAN.md  RESEARCH_PAPER_ROADMAP.md  SIMULATION_DEMO_COMPLETE.md  TRAINING_COMPLETE_SUMMARY.md  config.py  demo.py  geospatial.py  objects.py  pyproject.toml  real_data_api.py  requirements.txt  run_inference.py  visualizations.py
bioflux/: __init__.py
bioflux/config/: __init__.py  settings.py
bioflux/core/: agents.py  agents_refactored.py  environment.py
bioflux/data/: __init__.py  geospatial.py  weather.py
bioflux/training/: __init__.py  maddpg.py
docs/: RL_TRAINING.md
examples/: behavior_analysis.py  config_test.py  demo.py  deployment.py  full_training.py  inference.py  interactive_showcase.py  model_demos.py  rl_demo.py  run_all_demos.py  run_publication_analysis.py  simple_showcase.py  simulation_demo.py  test_structure.py  train_comparative.py
models/ppo/: prey_episode_0.pth  (+1 more)
output/: inference_results.json  lotka-volterra_simulation_data.json  lotka_volterra_balanced_analysis.json  lotka_volterra_demo_results.json  lotka_volterra_predator_advantage_analysis.json  lotka_volterra_prey_advantage_analysis.json  ppo_balanced_analysis.json  ppo_demo_results.json  ppo_predator_advantage_analysis.json  ppo_prey_advantage_analysis.json  ppo_simulation_data.json  training_results_20250623_142201.json
tests/: test_rl_training.py
(+66 files in other folders)
