[project]
name = "bioflux"
version = "0.3.0"
description = "Climate-driven ecosystem simulation with real-time data integration"
readme = "README.md"
authors = [
    {name = "BioFlux Team"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.5.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "plotly>=5.10.0",
    "rasterio>=1.3.0",
    "geopandas>=0.12.0",
    "folium>=0.14.0",
    "scikit-image>=0.19.0",
    "requests>=2.28.0",
    "pillow>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
]
notebook = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
]
extra = [
    "bokeh>=2.4.0",
    "dash>=2.0.0",
]

[project.scripts]
bioflux-demo = "bioflux.examples:run_demo"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["bioflux*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
